# Gnuplot_Iostream_pipe_animation

./: CMakeLists.txt  main.cpp
